syntax = "proto3";

option csharp_namespace = "RazorPagesRecipes.Protos";

service Recipes{
	rpc GetRecipes (Void) returns (stream RecipeModel);
	rpc GetRecipe (RecipeLookUpModel) returns (RecipeModel);
	rpc CreateRecipe (RecipeModel) returns (RecipeModel);
	rpc UpdateRecipe (UpdateRecipeRequest) returns (RecipeModel);
	rpc DeleteRecipe (RecipeLookUpModel) returns (RecipeModel);
}

message Void {}

message RecipeLookUpModel{
	string id=1;
}

message RecipeModel{
	string id = 1;
	string title = 2;
	string image_path=3;
	repeated string ingredients = 4;
	repeated string instructions = 5;
	repeated string categories = 6;
}

message RecipeListModel{
	repeated RecipeModel recipes_list=1;
}

message UpdateRecipeRequest{
	string id = 1;
	RecipeModel edited_recipe = 2;
}